# SVTool

./: README.md  settings.gradle
aavt/: build.gradle
aavt/src/main/java/com/wuwang/aavt/av/: CameraRecorder2.java  Mp4Processor2.java
aavt/src/main/java/com/wuwang/aavt/core/: Observable.java
aavt/src/main/java/com/wuwang/aavt/gl/: FrameBuffer.java
aavt/src/main/java/com/wuwang/aavt/media/: CameraProvider.java  ITextureProvider.java  Mp4Provider.java  SoundRecorder.java  SurfaceEncoder.java  SurfaceShower.java  VideoSurfaceProcessor.java
aavt/src/main/java/com/wuwang/aavt/media/av/: IStore.java
aavt/src/main/java/com/wuwang/aavt/media/hard/: HardMediaData.java  IHardStore.java  Mp4MuxStore.java  StrengthenMp4MuxStore.java
aavt/src/main/java/com/wuwang/aavt/utils/: MatrixUtils.java  ScreenUtils.java  VideoClip.java
aavt/src/main/java/com/wuwang/aavt/view/: BreakPointView.java  VideoSeekBar.java
example/: CMakeLists.txt  build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/cpp/: cmdutils.c  cmdutils.h  com_example_example_ffmpeg_FFmpegCmd.h  com_example_example_ffmpeg_FfmpegManager.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd_run.cpp  ffmpeg_thread.c  ffmpeg_thread.h  logutils.h
example/src/main/java/com/example/example/: CameraRecordActivity.java  MainActivity.java  PermissionAsker.java  SplitVideoActivity.java
example/src/main/java/com/example/example/activity/: CameraRecordActivity.java  FfmpegCmdActivity.java  MainActivity.java  SplitVideoActivity.java
example/src/main/java/com/example/example/ffmpeg/: FFmpegCmd.java  FfmpegManager.java
example/src/main/java/com/example/example/utils/: ScreenUtils.java
example/src/main/java/com/example/example/view/: BreakPointView.java
example/src/main/res/drawable/: bg_flash.xml  bg_record.xml
example/src/main/res/layout/: activity_camera_record.xml  activity_main.xml  activity_split_video.xml  activity_split_videoffmpeg.xml
example/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
